# HaffnerTracker

./: .env.example  .gitignore  Dockerfile  README.md  __main__.py  pyproject.toml
.github/workflows/: docker.yml  tests.yml
haffnertracker/: bot.py
haffnertracker/cogs/: Admin.py  Alerts.py  Errors.py  Events.py  News.py  Stock.py  Tasks.py
haffnertracker/entities/: alerts.py  entities.py  guild_config.py  news.py  prices.py
haffnertracker/services/: news.py  stock.py
haffnertracker/utils/: charts.py  constants.py  db.py
haffnertracker/views/: chart.py  info.py  news.py  price.py
tests/: test_db.py  test_news_entity.py  test_news_service.py
