[project]
name = "haffnertracker"
version = "0.1.0"
authors = [{ name = "Haffner Energy Watchers" }]
description = "Discord bot tracking Haffner Energy (ALHAF.PA) news and stock price."
requires-python = ">=3.13"

dependencies = [
    "aiohttp>=3.14.1",
    "aiosqlite>=0.21.0",
    "discord-py>=2.5.2",
    "feedparser>=6.0.11",
    "matplotlib>=3.10.0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "yfinance>=0.2.65",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
lint.select = ["E", "W", "F", "I", "N", "Q"]
lint.ignore = [
    "E203",
    "N999", # cog filenames are PascalCase to match their Cog class (discord.py convention)
]
line-length = 120
target-version = "py313"
indent-width = 4

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.isort]
lines-between-types = 1

[tool.isort]
profile = "black"
lines_between_types = 1
line_length = 120
py_version = 313
